--- a/restapidescription/build.gradle
+++ b/restapidescription/build.gradle
@@ -10,13 +10,23 @@ sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
+	maven { url "https://maven.vaadin.com/vaadin-addons" }
+}
+
+dependencyManagement {
+	imports {
+		mavenBom 'com.vaadin:vaadin-bom:14.4.4'
+	}
 }
 
 dependencies {
+	implementation 'com.vaadin:vaadin-spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'mysql:mysql-connector-java'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'mysql:mysql-connector-java:8.0.18'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 }
 
 test {
