--- a/restapidescription/src/main/resources/application.properties
+++ b/restapidescription/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#==== connect to mysql ======#
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/rest-api-description?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=mysql
 
